update latest code

--- a/COBA/COBA.csproj
+++ b/COBA/COBA.csproj
@@ -6772,6 +6772,7 @@
     <Content Include="js\Config.js" />
     <Content Include="js\controllers\ApplicationMasterController.js" />
     <Content Include="js\controllers\ApprovalsController.js" />
+    <Content Include="js\controllers\BusinessSector.js" />
     <Content Include="js\controllers\CountryMasterController.js" />
     <Content Include="js\controllers\EmailsController.js" />
     <Content Include="js\controllers\MapTaskController.js" />
@@ -6780,7 +6781,6 @@
     <Content Include="js\controllers\TaskController.js" />
     <Content Include="js\controllers\StrategyController.js" />
     <Content Include="js\controllers\OnboardingTaskController.js" />
-    <Content Include="js\controllers\CountryController.js" />
     <Content Include="js\controllers\TransferController.js" />
     <Content Include="js\controllers\TransferSettingsController.js" />
     <Content Include="js\custom.js" />
@@ -7676,6 +7676,8 @@
     <Content Include="Views\Main\UserManagement.cshtml" />
     <Content Include="Views\Main\RoleManagement.cshtml" />
     <Content Include="Views\Main\TransferSettings.cshtml" />
+    <Content Include="Views\Main\BusinessSector.cshtml" />
+    <Content Include="Views\Main\ApplicationMaster.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
