--- a/BRDFountain/BRDFountain.csproj
+++ b/BRDFountain/BRDFountain.csproj
@@ -572,15 +572,33 @@
     <Content Include="images\user.jpg" />
     <Content Include="js\animate.js" />
     <Content Include="js\Config.js" />
+    <Content Include="js\controllers\ApplicationCategoryMasterController.js" />
     <Content Include="js\controllers\ApplicationMasterController.js" />
     <Content Include="js\controllers\ApprovalsController.js" />
+    <Content Include="js\controllers\BusinessLineMasterController.js" />
     <Content Include="js\controllers\BusinessSector.js" />
+    <Content Include="js\controllers\BusinessSuffixMasterController.js" />
+    <Content Include="js\controllers\CapacityMasterController.js" />
+    <Content Include="js\controllers\ChildIDMasterController.js" />
     <Content Include="js\controllers\CountryMasterController.js" />
+    <Content Include="js\controllers\DiscretionaryCodeMasterController.js" />
+    <Content Include="js\controllers\FTAApplicationCodeMasterController.js" />
+    <Content Include="js\controllers\FTAApplicationNameMasterController.js" />
+    <Content Include="js\controllers\FTAApplicationOwnerMasterController.js" />
+    <Content Include="js\controllers\FTAShortCodeMasterController.js" />
+    <Content Include="js\controllers\FTAStrategyCodeMasterController.js" />
+    <Content Include="js\controllers\FTAStrategyNameMasterController.js" />
+    <Content Include="js\controllers\FTAStrategyOwnerMasterController.js" />
+    <Content Include="js\controllers\ParentIDMasterController.js" />
+    <Content Include="js\controllers\PriorityScoreMasterController.js" />
     <Content Include="js\controllers\ProductTypeMasterController.js" />
     <Content Include="js\controllers\RegionMasterController.js" />
     <Content Include="js\controllers\ChangeManagementController.js" />
     <Content Include="js\controllers\StrategyController.js" />
+    <Content Include="js\controllers\StrategytypeMasterController.js" />
+    <Content Include="js\controllers\SystemFlowMasterController.js" />
     <Content Include="js\controllers\TransferSettingsController.js" />
+    <Content Include="js\controllers\VenuetypeMasterController.js" />
     <Content Include="js\HomeApp.js" />
     <Content Include="js\loginApp.js" />
     <Content Include="js\ReportApp.js" />
