--- a/BRDFountain/BRDFountain.csproj
+++ b/BRDFountain/BRDFountain.csproj
@@ -612,6 +612,7 @@
     <Content Include="Lib\jquery-1.11.0.min.js" />
     <Content Include="Lib\jquery.dataTables.min.js" />
     <Content Include="Lib\moment-with-locales.js" />
+    <Content Include="Lib\moment-with-locales.min.js" />
     <Content Include="Lib\npm.js" />
     <Content Include="Lib\responsive-tabs.js" />
     <Content Include="plugins\bootstrap-datetimepicker.js" />
