changes till date

--- a/COBA/COBA.csproj
+++ b/COBA/COBA.csproj
@@ -6669,12 +6669,20 @@
     <Content Include="bower_components\select2\tests\vendor\qunit-1.23.1.css" />
     <Content Include="bower_components\select2\tests\vendor\qunit-1.23.1.js" />
     <Content Include="bower_components\select2\vendor\jquery-2.1.0.js" />
+    <Content Include="css\bootstrap-datetimepicker.css" />
+    <Content Include="css\bootstrap-theme.css" />
+    <Content Include="css\bootstrap-theme.min.css" />
+    <Content Include="css\bootstrap.css" />
+    <Content Include="css\bootstrap.min.css" />
+    <Content Include="css\dataTables.bootstrap.min.css" />
+    <Content Include="css\font-awesome.min.css" />
     <Content Include="css\for_bootstrap.css" />
     <Content Include="css\jquery.mCustomScrollbar.css" />
     <Content Include="css\leftmenu.css" />
     <Content Include="css\magic-check.css" />
     <Content Include="css\mCSB_buttons.png" />
     <Content Include="css\style.css" />
+    <Content Include="css\toaster.css" />
     <Content Include="dist\css\AdminLTE.css" />
     <Content Include="dist\css\AdminLTE.min.css" />
     <Content Include="dist\css\skins\skin-black-light.css" />
@@ -6745,6 +6753,43 @@
     <Content Include="DLL\WebMatrix.Data.dll" />
     <Content Include="DLL\WebMatrix.WebData.dll" />
     <Content Include="Global.asax" />
+    <Content Include="images\delete.svg" />
+    <Content Include="images\edit.svg" />
+    <Content Include="images\export.svg" />
+    <Content Include="images\leftpanel_bg.png" />
+    <Content Include="images\leftpanel_min.png" />
+    <Content Include="images\logo.svg" />
+    <Content Include="images\logout.svg" />
+    <Content Include="images\menu_icon\1.svg" />
+    <Content Include="images\menu_icon\10.svg" />
+    <Content Include="images\menu_icon\10h.svg" />
+    <Content Include="images\menu_icon\11.svg" />
+    <Content Include="images\menu_icon\11h.svg" />
+    <Content Include="images\menu_icon\12.svg" />
+    <Content Include="images\menu_icon\12h.svg" />
+    <Content Include="images\menu_icon\1h.svg" />
+    <Content Include="images\menu_icon\2.svg" />
+    <Content Include="images\menu_icon\2h.svg" />
+    <Content Include="images\menu_icon\3.svg" />
+    <Content Include="images\menu_icon\3h.svg" />
+    <Content Include="images\menu_icon\4.svg" />
+    <Content Include="images\menu_icon\4h.svg" />
+    <Content Include="images\menu_icon\5.svg" />
+    <Content Include="images\menu_icon\5h.svg" />
+    <Content Include="images\menu_icon\6.svg" />
+    <Content Include="images\menu_icon\6h.svg" />
+    <Content Include="images\menu_icon\7.svg" />
+    <Content Include="images\menu_icon\7h.svg" />
+    <Content Include="images\menu_icon\8.svg" />
+    <Content Include="images\menu_icon\8h.svg" />
+    <Content Include="images\menu_icon\9.svg" />
+    <Content Include="images\menu_icon\9h.svg" />
+    <Content Include="images\notification.svg" />
+    <Content Include="images\print.svg" />
+    <Content Include="images\search_icon.svg" />
+    <Content Include="images\settings.svg" />
+    <Content Include="images\sort.jpg" />
+    <Content Include="images\User\1.jpg" />
     <Content Include="img\clock.png" />
     <Content Include="img\arrow-up.png" />
     <Content Include="img\backgrounds\bg-4.jpg" />
@@ -6771,9 +6816,12 @@
     <Content Include="js\controllers\ClientController.js" />
     <Content Include="js\controllers\OnboardingTaskController.js" />
     <Content Include="js\HomeApp.js" />
+    <Content Include="js\html5shiv.js" />
+    <Content Include="js\jquery.mCustomScrollbar.concat.min.js" />
     <Content Include="js\loginApp.js" />
     <Content Include="js\ReportApp.js" />
     <Content Include="js\RoleApp.js" />
+    <Content Include="js\script.js" />
     <Content Include="js\services\EmailService.js" />
     <Content Include="js\services\MapTaskService.js" />
     <Content Include="js\services\OnboardingTaskService.js" />
@@ -8217,6 +8265,10 @@
     <Content Include="bower_components\select2\src\scss\_dropdown.scss" />
     <Content Include="bower_components\select2\src\scss\_multiple.scss" />
     <Content Include="bower_components\select2\src\scss\_single.scss" />
+    <Content Include="css\bootstrap-theme.css.map" />
+    <Content Include="css\bootstrap-theme.min.css.map" />
+    <Content Include="css\bootstrap.css.map" />
+    <Content Include="css\bootstrap.min.css.map" />
     <None Include="Properties\PublishProfiles\CRMUserManagement.pubxml" />
     <Content Include="Views\UserManagement\custom.js" />
     <Content Include="Web.config">
