--- a/BRDFountain/BRDFountain.csproj
+++ b/BRDFountain/BRDFountain.csproj
@@ -2080,6 +2080,8 @@
     <Content Include="Lib\moment-with-locales.min.js" />
     <Content Include="Lib\npm.js" />
     <Content Include="Lib\responsive-tabs.js" />
+    <Content Include="Lib\underscore-min.js" />
+    <Content Include="Lib\underscore.js" />
     <Content Include="plugins\bootstrap-datetimepicker.js" />
     <Content Include="plugins\bootstrap-datetimepicker.min.css" />
     <Content Include="plugins\bootstrap-slider\bootstrap-slider.js" />
