--- a/BRDFountain/BRDFountain.csproj
+++ b/BRDFountain/BRDFountain.csproj
@@ -2055,6 +2055,7 @@
     <Content Include="js\controllers\PriorityScoreMasterController.js" />
     <Content Include="js\controllers\ProductTypeMasterController.js" />
     <Content Include="js\controllers\RegionMasterController.js" />
+    <Content Include="js\controllers\ReportsController.js" />
     <Content Include="js\controllers\StrategyController.js" />
     <Content Include="js\controllers\StrategytypeMasterController.js" />
     <Content Include="js\controllers\SystemFlowMasterController.js" />
